demos/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: multi-ingress-kube-system
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
     paths:
     - path: /grafana   
       backend:
         serviceName: monitoring-grafana   
         servicePort: 80
